// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`tooling reports should report a check that found no drift 1`] = `
{
  "command": [
    "docs",
    "generate",
  ],
  "duration": "<duration>",
  "error": null,
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "directory": "<sandbox>/docs",
    "isCheck": true,
    "pages": 14,
    "removed": [],
    "stale": [],
    "status": "passed",
  },
}
`;

exports[`tooling reports should report an extern check 1`] = `
{
  "command": [
    "externs",
    "export",
  ],
  "duration": "<duration>",
  "error": null,
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "destination": "<sandbox>/externs.json",
    "externs": 3,
    "findings": [],
    "format": "json",
    "isCheck": true,
    "source": "<resources>/declarations",
    "status": "passed",
  },
}
`;

exports[`tooling reports should report an extern export 1`] = `
{
  "command": [
    "externs",
    "export",
  ],
  "duration": "<duration>",
  "error": null,
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "destination": "<sandbox>/externs.json",
    "externs": 3,
    "findings": [],
    "format": "json",
    "isCheck": false,
    "source": "<resources>/declarations",
    "status": "passed",
  },
}
`;

exports[`tooling reports should report the pages a generation wrote 1`] = `
{
  "command": [
    "docs",
    "generate",
  ],
  "duration": "<duration>",
  "error": null,
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "directory": "<sandbox>/docs",
    "isCheck": false,
    "pages": 14,
    "removed": [],
    "stale": [],
    "status": "passed",
  },
}
`;

exports[`tooling reports should report what drifted when the check fails 1`] = `
{
  "command": [
    "docs",
    "generate",
  ],
  "duration": "<duration>",
  "error": "Check failed: 14 finding(s)",
  "exitCode": 3,
  "outcome": "checkFailed",
  "result": {
    "directory": "<sandbox>/drifted",
    "isCheck": true,
    "pages": 14,
    "removed": [],
    "stale": [
      "outdated: README.md",
      "missing: archive.md",
      "missing: dialog.md",
      "missing: docs.md",
      "missing: externs.md",
      "missing: gamedata.md",
      "missing: ltx.md",
      "missing: ogf.md",
      "missing: omf.md",
      "missing: particle.md",
      "missing: spawn.md",
      "missing: texture.md",
      "missing: thm.md",
      "missing: translation.md",
    ],
    "status": "failed",
  },
}
`;
